# feistel-net

./: AGENT.md  Cargo.toml  README.md
src/: feistel.rs  key_schedule.rs  lib.rs  permutation.rs  round.rs  sbox.rs
